# OpenGL-IMGui-Docking-CMake-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/display/: base_window.hpp  program_window.hpp
src/: main.cpp
src/display/: base_window.cpp  game_window.cpp  program_window.cpp
src/imgui/: imgui_demo.cpp  imgui_impl_glfw.cpp
src/implot/: implot_demo.cpp
